--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
   "author": "James Manalang",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
