Add concurrenly scripts for server and client. Clean up client files

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon app.js"
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "dev": "concurrently --kill-others \"npm run server\" \"cd ../client && npm start\""
   },
   "author": "James Manalang",
   "license": "ISC",
